fix: add route to GET customers pageable