@@ -1,6 +1,8 @@
 package br.com.fiap.techchallenge.service;
 
 import br.com.fiap.techchallenge.model.dto.ClienteDTO;
+import br.com.fiap.techchallenge.model.entity.Cliente;
+import br.com.fiap.techchallenge.model.mapper.ClienteMapper;
 import br.com.fiap.techchallenge.repository.ClienteRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,9 +19,9 @@ public class ClienteService {
 
     private final ClienteRepository repository;
 
-    public List<ClienteDTO> listarClientes(Integer page, Integer size) {
+    public List<Cliente> listarClientes(Integer page, Integer size) {
         PageRequest pageable = PageRequest.of(page, size);
-        return repository.findAll(pageable).stream().map(ClienteDTO::toDTO).collect(Collectors.toList());
+        return repository.findAll(pageable).toList();
     }
 
 }
